force-app/main/default/objects/Contact/fields/Address_Verified__c.field-meta.xml
<CustomField>
    <fullName>Address_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Checked means Address is verified from ERP System.</description>
    <label>Address Verified</label>
    <type>Checkbox</type>
</CustomField>