force-app/main/default/objects/Contact/fields/Alternate_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Email_Address__c</fullName>
    <description>Alternate Email Address</description>
    <label>Alternate Email Address</label>
    <type>Email</type>
</CustomField>