force-app/main/default/objects/Contact/fields/Contact_Edition_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Contact_Edition_Mapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>x_1st Contact Edition Mapping</label>
    <referenceTo>Contact_Edition_Mapping__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>