force-app/main/default/objects/Contact/fields/Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Number__c</fullName>
    <description>Informa Markets.</description>
    <displayFormat>IMC-{00000}</displayFormat>
    <label>Contact Number</label>
    <type>AutoNumber</type>
</CustomField>