force-app/main/default/objects/Contact/fields/Contact_Number_Text__c.field-meta.xml
<CustomField>
    <fullName>Contact_Number_Text__c</fullName>
    <description>Used to record IM Contact Number. Used to preserve ContactID’s when Salesforce Account are merged.</description>
    <label>Contact Number Text</label>
    <length>130</length>
    <type>Text</type>
</CustomField>