force-app/main/default/objects/Contact/fields/Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type__c</fullName>
    <label>Contact Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary Contact</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Operations Contact</fullName>
            </value>
            <value>
                <fullName>Invoice Contact</fullName>
            </value>
            <value>
                <fullName>Accounting Contact</fullName>
            </value>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>Booth Logistics</fullName>
            </value>
            <value>
                <fullName>Collection</fullName>
            </value>
            <value>
                <fullName>Editorial Contact</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Health and Safety Contact</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Marketing Services</fullName>
            </value>
            <value>
                <fullName>Primary Booth Contact</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Show Coordinator</fullName>
            </value>
            <value>
                <fullName>Booth Contact</fullName>
            </value>
            <value>
                <fullName>Nota Fiscal</fullName>
            </value>
            <value>
                <fullName>Stand Contractor</fullName>
            </value>
            <value>
                <fullName>Agreement Contact</fullName>
            </value>
            <value>
                <fullName>MarkitMkr</fullName>
            </value>
            <value>
                <fullName>Operation Contact 2</fullName>
            </value>
            <value>
                <fullName>Local Representative</fullName>
            </value>
            <value>
                <fullName>Legal Representative 1</fullName>
            </value>
            <value>
                <fullName>Legal Representative 2</fullName>
            </value>
            <value>
                <fullName>Witness</fullName>
            </value>
            <value>
                <fullName>No Revenue</fullName>
            </value>
            <value>
                <fullName>Revenue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>