force-app/main/default/objects/Contact/fields/Duplicate__c.field-meta.xml
<CustomField>
    <fullName>Duplicate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Contact Duplicate?</description>
    <label>Duplicate</label>
    <type>Checkbox</type>
</CustomField>