force-app/main/default/objects/Contact/fields/ERP_Sync__c.field-meta.xml
<CustomField>
    <fullName>ERP_Sync__c</fullName>
    <description>This flag is used by Mulesoft to understand if this Contact is needs to be synced to the ERP.</description>
    <label>ERP Sync</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting Update</fullName>
            </value>
            <value>
                <fullName>Synced</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Awaiting</fullName>
                <isActive>false</isActive>
                <label>Awaiting</label>
            </value>
            <value>
                <fullName>Update</fullName>
                <isActive>false</isActive>
                <label>Update</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>