force-app/main/default/objects/Contact/fields/Financial_Status__c.field-meta.xml
<CustomField>
    <fullName>Financial_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Active or Inactive from a Finance perspective.</description>
    <label>Financial Status</label>
    <type>Checkbox</type>
</CustomField>