force-app/main/default/objects/Contact/fields/IM_Contact_No__c.field-meta.xml
<CustomField>
    <fullName>IM_Contact_No__c</fullName>
    <description>Informa Markets Customer facing Contact Number. This should point to the Contact.</description>
    <formula>IF(ISBLANK( Contact_Number_Text__c  ),
Contact_Number__c,Contact_Number_Text__c)</formula>
    <label>IM Contact No</label>
    <type>Text</type>
</CustomField>