force-app/main/default/objects/Contact/fields/IOM_Contact_Identifier__c.field-meta.xml
<CustomField>
    <fullName>IOM_Contact_Identifier__c</fullName>
    <description>The field is created to identify the contacts which have been created using the IOM Order Management process.</description>
    <label>IOM Contact Identifier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>