force-app/main/default/objects/Contact/fields/IOM_Contact_No__c.field-meta.xml
<CustomField>
    <fullName>IOM_Contact_No__c</fullName>
    <description>IOM Contact Number [External Id]</description>
    <externalId>true</externalId>
    <label>IOM Contact No</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>