force-app/main/default/objects/Contact/fields/IOM_Sync_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>IOM_Sync_Error_Message__c</fullName>
    <description>Sync error message if there is error while sending Contact to IOM From CRM.</description>
    <label>IOM Sync Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>