force-app/main/default/objects/Contact/fields/IsTestUser__c.field-meta.xml
<CustomField>
    <fullName>IsTestUser__c</fullName>
    <defaultValue>false</defaultValue>
    <description>to check If the contact is test user</description>
    <label>IsTestUser</label>
    <type>Checkbox</type>
</CustomField>