force-app/main/default/objects/Contact/fields/Job_Level_Position__c.field-meta.xml
<CustomField>
    <fullName>Job_Level_Position__c</fullName>
    <label>Job Level/Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Subject Matter Expert</fullName>
            </value>
            <value>
                <fullName>Consultant/Engineer</fullName>
            </value>
            <value>
                <fullName>Individual Contributor</fullName>
            </value>
            <value>
                <fullName>Administrator</fullName>
            </value>
            <value>
                <fullName>Assistant</fullName>
            </value>
            <value>
                <fullName>Board Director</fullName>
            </value>
            <value>
                <fullName>CEO/COO/President/Chairman</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Head of Department</fullName>
            </value>
            <value>
                <fullName>Manager with staff</fullName>
            </value>
            <value>
                <fullName>Manager without Staff</fullName>
            </value>
            <value>
                <fullName>Managing Director/ Sr. VP / EVP</fullName>
            </value>
            <value>
                <fullName>Non Board Member</fullName>
            </value>
            <value>
                <fullName>Non-management</fullName>
            </value>
            <value>
                <fullName>Owner/Proprietor</fullName>
            </value>
            <value>
                <fullName>VP / Director</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>