force-app/main/default/objects/Contact/fields/Legacy_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Contact_Id__c</fullName>
    <description>Id of Contact from Legacy CRM system.</description>
    <label>Legacy Contact Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>