force-app/main/default/objects/Contact/fields/Legacy_Contact_Link__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Contact_Link__c</fullName>
    <description>Clicking on this link will take you to the original Org Contact page, from where this Contact was Imported from</description>
    <formula>HYPERLINK(TEXT(Account.Legacy_CRM_Org_URL__c)+ Legacy_Contact_Id__c , &quot;Go to Contact Detail Page&quot;, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Clicking on this link will take you to the original Org Contact page, from where this Contact was Imported from</inlineHelpText>
    <label>Legacy Contact Link</label>
    <type>Text</type>
</CustomField>