force-app/main/default/objects/Contact/fields/LinkedIn__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn__c</fullName>
    <description>LinkedIn URL of Contact.</description>
    <label>LinkedIn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>