force-app/main/default/objects/Contact/fields/MailingCountry__c.field-meta.xml
<CustomField>
    <fullName>MailingCountry__c</fullName>
    <description>Field Created for Backup of Country Before Enabling Country/State Picklist.</description>
    <label>MailingCountry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>