force-app/main/default/objects/Contact/fields/MailingState__c.field-meta.xml
<CustomField>
    <fullName>MailingState__c</fullName>
    <description>Field Created for Backup of State Before Enabling Country/State Picklist.</description>
    <label>MailingState</label>
    <length>255</length>
    <type>Text</type>
</CustomField>