force-app/main/default/objects/Contact/fields/Mapping_Original_Contact__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Original_Contact__c</fullName>
    <description>Original Contact Mapping Id.</description>
    <label>Mapping Original Contact</label>
    <length>50</length>
    <type>Text</type>
</CustomField>