force-app/main/default/objects/Contact/fields/Oracle_Number__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Number__c</fullName>
    <description>Oracle Contact Number.</description>
    <label>Oracle Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>