force-app/main/default/objects/Contact/fields/OtherCountry__c.field-meta.xml
<CustomField>
    <fullName>OtherCountry__c</fullName>
    <description>Field Created for Backup of Country Before Enabling Country/State Picklist.</description>
    <label>OtherCountry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>