force-app/main/default/objects/Contact/fields/OtherState__c.field-meta.xml
<CustomField>
    <fullName>OtherState__c</fullName>
    <description>Field Created for Backup of State Before Enabling Country/State Picklist.</description>
    <label>OtherState</label>
    <length>255</length>
    <type>Text</type>
</CustomField>