force-app/main/default/objects/Contact/fields/Source_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Contact_Id__c</fullName>
    <description>Id of Contact from Source CRM system.</description>
    <label>Source Contact Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>