force-app/main/default/objects/Contact/fields/Source_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Source_Contact_Number__c</fullName>
    <description>Contact Number of Contact from Source CRM system.</description>
    <externalId>true</externalId>
    <label>Source Contact Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>