force-app/main/default/objects/Contact/fields/TempContactId__c.field-meta.xml
<CustomField>
    <fullName>TempContactId__c</fullName>
    <description>populate the Id of Temp Contact obj</description>
    <label>TempContactId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>