force-app/main/default/objects/Contact/validationRules/Email_or_Phone_is_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_or_Phone_is_mandatory</fullName>
    <active>true</active>
    <description>Either Email or Phone is mandatory for Contact</description>
    <errorConditionFormula>AND(ISBLANK(Email),ISBLANK(MobilePhone))</errorConditionFormula>
    <errorMessage>Either Email or Mobile is required</errorMessage>
</ValidationRule>