force-app/main/default/objects/Contact/validationRules/First_Name_is_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Name_is_Mandatory</fullName>
    <active>false</active>
    <description>First Name is mandatory for Contact</description>
    <errorConditionFormula>AND(ISBLANK( FirstName ), ISPICKVAL( Legacy_CRM_Instance__c , &quot;Payment Portal&quot;))</errorConditionFormula>
    <errorMessage>First Name is required.</errorMessage>
</ValidationRule>